--- a/MockupApp/MockupApp/MockupApp/Clients.xaml
+++ b/MockupApp/MockupApp/MockupApp/Clients.xaml
@@ -2,5 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MockupApp.Clients" Title="Clients" Icon="ic_accessibility_black_24dp.png">
-    <Label HorizontalOptions="Center" VerticalOptions="Center" Text="Clients"></Label>
+    <StackLayout Padding="0,20,0,0">
+        <Label HorizontalOptions="Center" Text="Clients"></Label>
+        <ListView x:Name="LvClient" ItemSelected="LvClient_OnItemSelected"></ListView>
+    </StackLayout>
+    
 </ContentPage>
