--- a/MockupApp/MockupApp/MockupApp/BoomStructuur.xaml
+++ b/MockupApp/MockupApp/MockupApp/BoomStructuur.xaml
@@ -2,4 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MockupApp.BoomStructuur" Title="Boom structuur" Icon="ic_toc_black_24dp.png">
+    <StackLayout Padding="0,20,0,0">
+        <Label HorizontalOptions="Center" Text="Participatie op:"></Label>
+        <ListView x:Name="LvParticipatie" ItemSelected="LvParticipatie_OnItemSelected"></ListView>
+    </StackLayout>
 </ContentPage>
