--- a/MockupApp/MockupApp/MockupApp/Clients_1.xaml
+++ b/MockupApp/MockupApp/MockupApp/Clients_1.xaml
@@ -9,22 +9,20 @@
             <StackLayout>
                 <Label Margin="10,10,10,10" HorizontalOptions="Center" TextColor="#000000" x:Name="Lbinfo" FontSize="Large"></Label>
                 <Label Margin="10,10,10,10" HorizontalOptions="Center" TextColor="#000000" x:Name="Lbinfo2" FontSize="Large"></Label>
-               
-            </StackLayout>
-        </Grid>
-
-        <StackLayout Padding="200,10,200,0">
-            <Grid HorizontalOptions="Center">
-                <ListView x:Name="LvCases"></ListView>
-                    <Button x:Name="BtnAdd" HorizontalOptions="Center" Text="+" VerticalOptions="Center" Clicked="BtnAdd_OnClicked"></Button>
-                    
-                </Grid>
                 
             </StackLayout>
-            <StackLayout HorizontalOptions="Center" Padding="100,0,100,30">
-                <Entry BackgroundColor="Silver" x:Name="EntryCaseName" Text="Case name..." TextColor="#000000"></Entry>
-            </StackLayout>
-            
+                
+            </Grid>
+            <Button x:Name="BtnAdd" HorizontalOptions="Center" Text="+" VerticalOptions="Center" Clicked="BtnAdd_OnClicked"></Button>
+            <!--<StackLayout Padding="200,10,200,0">
+                <Grid HorizontalOptions="Center">
+                    <ListView x:Name="LvCases"></ListView>
+                    <Button x:Name="BtnAdd" HorizontalOptions="Center" Text="+" VerticalOptions="Center" Clicked="BtnAdd_OnClicked"></Button>
+
+                </Grid>
+
+            </StackLayout>-->
+
 
         </StackLayout>
     </ScrollView>
